--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,19 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Push the Docker image to Dockerhub
       run: docker push montoyita41/proyecto:${{ steps.date.outputs.date }}
+
+ deploykubernetes:
+      runs-on: ubuntu-latest
+      steps:
+          - uses: actions/checkout@v4
+          - name: Run Terraform
+            run: |
+                  set -e 
+                  cd terraform
+                  terraform init -input=false
+                  terraform apply -input=false -auto-approve
+            env:
+              ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+              ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+              ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+              ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
