--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,17 +28,27 @@ jobs:
       run: docker push montoyita41/proyecto:${{ steps.date.outputs.date }}
 
  deploykubernetes:
-      runs-on: ubuntu-latest
-      steps:
-          - uses: actions/checkout@v4
-          - name: Run Terraform
-            run: |
-                  set -e 
-                  cd terraform
-                  terraform init -input=false
-                  terraform apply -input=false -auto-approve
-            env:
-              ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-              ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-              ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-              ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run Terraform
+        run: |
+          set -e 
+          cd terraform
+          terraform init -input=false
+          terraform apply -input=false -auto-approve
+        env:
+          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      - name: OIDC Login to Azure Public Cloud with AzPowershell (enableAzPSSession true)
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.ARM_CLIENT_ID }}
+          tenant-id: ${{ secrets.ARM_TENANT_ID }}
+          subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          enable-AzPSSession: true
+      - name: Set Azure subscription
+        run: az account set --subscription ${{secrets.ARM_SUBSCRIPTION_ID}}
+  
