--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,18 +30,18 @@ jobs:
  deploykubernetes:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Run Terraform
-        run: |
-          set -e 
-          cd terraform
-          terraform init -input=false
-          terraform apply -input=false -auto-approve
-        env:
-          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+#/      - uses: actions/checkout@v4
+   #     - name: Run Terraform
+  #        run: |
+  #          set -e 
+  #          cd terraform
+   #        terraform init -input=false
+   #         terraform apply -input=false -auto-approve
+  #        env:
+   #         ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+ #           ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+ #         ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+#          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       - name: Set Azure subscription
-        run: az account set --subscription ${{secrets.ARM_SUBSCRIPTION_ID}}
+        run: az account set --subscription 83c62e88-35c0-4f8d-8636-f21914cc6d80
   
