--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,5 +49,5 @@ jobs:
         with:
           azcliversion: latest
           inlineScript: |
-            az account set --subscription 83c62e88-35c0-4f8d-8636-f21914cc6d80
+            az aks get-credentials --resource-group travel-rg --name kubernetes-travel --overwrite-existing
   
