--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,10 @@ jobs:
     - uses: azure/login@v2
       with:
         creds: '{"clientId":"${{ secrets.ARM_CLIENT_ID }}","clientSecret":"${{ secrets.ARM_CLIENT_SECRET }}","subscriptionId":"${{ secrets.ARM_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.ARM_TENANT_ID }}"}'
+    
+    - name: Checkout código
+      uses: actions/checkout@v2
+    
     - name: Azure CLI script
       uses: azure/cli@v2
       with:
@@ -58,10 +62,7 @@ jobs:
           az aks install-cli
           az account set --subscription 83c62e88-35c0-4f8d-8636-f21914cc6d80
           az aks get-credentials --resource-group travel-rg --name kubernetes-travel --overwrite-existing
-    - name: Checkout código
-      uses: actions/checkout@v2
-    - name: Aplicar archivo de despliegue
-      run: kubectl apply -f terraform/k8s/api-deployment.yml
+          kubectl apply -f terraform/k8s/api-deployment.yml --validate=false
+          kubectl get service
 
-    - name: Obtener servicio
-      run: kubectl get service
+ 
