--- a/terraform/k8s/api-deployment.yml
+++ b/terraform/k8s/api-deployment.yml
@@ -21,7 +21,7 @@ spec:
         "kubernetes.io/os": linux
       containers:
       - name: web
-        image: montoyita41/proyecto:2024-05-11T10-27-12
+        image: montoyita41/proyecto:{{ lookup('file', '/tmp/tag_id.txt') }}
         ports:
         - containerPort: 80
         resources:
