--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
       run: docker push montoyita41/proyecto:${{ steps.date.outputs.date }}
 
  deploykubernetes:
+    needs: [ build ]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
