--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,22 +13,11 @@ jobs:
       tag_id: ${{ steps.date.outputs.date }}
 
     steps:
-    - name: Save Tag ID to file
-      run: echo "${{ steps.date.outputs.date }}" > tag_id.txt
-    - name: Publish tag_id.txt as artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: tag_id
-        path: tag_id.txt
-    - name: Download tag_id artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: tag_id
-        path: /tmp
     - uses: actions/checkout@v4
     - name: Get timestamp # get the date of the build
       id: date
       run: echo "date=$(TZ=':America/Bogota' date +'%Y-%m-%dT%H-%M-%S')" >> $GITHUB_OUTPUT
+
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag montoyita41/proyecto:${{ steps.date.outputs.date }}
     - name: Login to Dockerhub
@@ -69,6 +58,7 @@ jobs:
       uses: actions/checkout@v2
     
     - name: Azure CLI script
+      env:  ${{ steps.date.outputs.date }}
       uses: azure/cli@v2
       with:
         azcliversion: latest
