--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,8 @@ jobs:
           az aks install-cli
           az account set --subscription 83c62e88-35c0-4f8d-8636-f21914cc6d80
           az aks get-credentials --resource-group travel-rg --name kubernetes-travel --overwrite-existing
-          kubectl apply -f terraform/k8s/api-deployment.yml --validate=false
+          kubectl apply -f terraform/k8s/api-deployment.yml  --validate=false
           sleep 30s && kubectl get service
-
+      env:
+        TAG: ${{ steps.date.outputs.date }}
  
