--- a/terraform/k8s/api-deployment.yml
+++ b/terraform/k8s/api-deployment.yml
@@ -23,7 +23,7 @@ spec:
         "kubernetes.io/os": linux
       containers:
       - name: web
-        image: montoyita41/proyecto:TAG_ID
+        image: montoyita41/proyecto:{{ lookup('env', 'TAG') }}
         ports:
         - containerPort: 80
         resources:
