--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,15 @@ jobs:
       run: echo "date=$(TZ=':America/Bogota' date +'%Y-%m-%dT%H-%M-%S')" >> $GITHUB_OUTPUT
     - name: Save tag_id to file
       run: echo "tag_id=${{ steps.date.outputs.tag_id }}" >> tag_id.txt
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag montoyita41/proyecto:${{ steps.date.outputs.date }}
+    - name: Login to Dockerhub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Push the Docker image to Dockerhub
+      run: docker push montoyita41/proyecto:${{ steps.date.outputs.date }}
     - uses: azure/login@v2
       with:
         creds: '{"clientId":"${{ secrets.ARM_CLIENT_ID }}","clientSecret":"${{ secrets.ARM_CLIENT_SECRET }}","subscriptionId":"${{ secrets.ARM_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.ARM_TENANT_ID }}"}'
