--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,18 @@ jobs:
     needs: [ build ]
     runs-on: ubuntu-latest
     steps:
-
+    - uses: actions/checkout@v4
+    - name: Run Terraform
+      run: |
+        set -e
+        cd terraform
+        terraform init -input=false
+        terraform apply -input=false -auto-approve
+      env:
+        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
 
     - name: Add /usr/local/bin to PATH
       run: |
@@ -53,8 +64,7 @@ jobs:
           az aks install-cli
           az account set --subscription 83c62e88-35c0-4f8d-8636-f21914cc6d80
           az aks get-credentials --resource-group travel-rg --name kubernetes-travel --overwrite-existing
-          kubectl apply -f terraform/k8s/api-deployment.yml  --validate=false
+          kubectl apply -f terraform/k8s/api-deployment.yml  --validate=false --set env.tag_id=${{ steps.date.outputs.tag_id }}
           sleep 30s && kubectl get service
-      env:
-        TAG: ${{ steps.date.outputs.date }}
+
  
