--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,44 +7,13 @@ on:
     branches: [ "master" ]
 
 jobs:
- build:
-    runs-on: ubuntu-latest
-    outputs:
-      tag_id: ${{ steps.date.outputs.date }}
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Get timestamp # get the date of the build
-      id: date
-      run: echo "date=$(TZ=':America/Bogota' date +'%Y-%m-%dT%H-%M-%S')" >> $GITHUB_OUTPUT
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag montoyita41/proyecto:${{ steps.date.outputs.date }}
-    - name: Login to Dockerhub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Push the Docker image to Dockerhub
-      run: docker push montoyita41/proyecto:${{ steps.date.outputs.date }}
-
 
 
  deploykubernetes:
-    needs: [ build ]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Run Terraform
-      run: |
-        set -e
-        cd terraform
-        terraform init -input=false
-        terraform apply -input=false -auto-approve
-      env:
-        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+
 
     - name: Add /usr/local/bin to PATH
       run: |
@@ -64,6 +33,10 @@ jobs:
         azcliversion: latest
         inlineScript: |
           az aks install-cli
+          az network public-ip create \
+          --resource-group travel-rg \
+          --name TRAVEL-PIP \
+          --allocation-method static
           az account set --subscription 83c62e88-35c0-4f8d-8636-f21914cc6d80
           az aks get-credentials --resource-group travel-rg --name kubernetes-travel --overwrite-existing
           kubectl apply -f terraform/k8s/api-deployment.yml  --validate=false  
