--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,10 +33,15 @@ jobs:
         azcliversion: latest
         inlineScript: |
           az aks install-cli
-          az network public-ip create \
-          --resource-group travel-rg \
-          --name TRAVEL-PIP \
-          --allocation-method static
+          PIP_RESOURCE_GROUP=travel-rg
+          AKS_RESOURCE_GROUP=travel-rg
+          AKS_CLUSTER_NAME=kubernetes-travel
+          CLIENT_ID=$(az aks show --resource-group $AKS_RESOURCE_GROUP --name $AKS_CLUSTER_NAME --query "servicePrincipalProfile.clientId" --output tsv)
+          SUB_ID=$(az account show --query "id" --output tsv) 
+          az role assignment create\
+              --assignee $CLIENT_ID \
+              --role "Network Contributor" \
+              --scope /subscriptions/$SUB_ID/resourceGroups/$PIP_RESOURCE_GROUP
           az account set --subscription 83c62e88-35c0-4f8d-8636-f21914cc6d80
           az aks get-credentials --resource-group travel-rg --name kubernetes-travel --overwrite-existing
           kubectl apply -f terraform/k8s/api-deployment.yml  --validate=false  
