--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,13 @@ jobs:
     - name: Checkout código
       uses: actions/checkout@v2
     
+    - name: Install Helm
+      run: |
+        curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
+        chmod 700 get_helm.sh
+        ./get_helm.sh
+
+    
     - name: Azure CLI script
       uses: azure/cli@v2
       env:
@@ -35,7 +42,6 @@ jobs:
           az aks install-cli
           az account set --subscription 83c62e88-35c0-4f8d-8636-f21914cc6d80
           az aks get-credentials --resource-group travel-rg --name kubernetes-travel --overwrite-existing
-          brew install helm
           kubectl create namespace ingress-basic
           helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
           helm repo update
