--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
           helm repo update
           helm show values ingress-nginx/ingress-nginx
           helm install ingress-nginx ingress-nginx/ingress-nginx \
-            --namespace ingress-basic \
+            --namespace ingress-basic1 \
             --set controller.replicaCount=2 \
             --set controller.nodeSelector."beta\.kubernetes\.io/os"=linux \
             --set defaultBackend.nodeSelector."beta\.kubernetes\.io/os"=linux \
@@ -54,4 +54,6 @@ jobs:
           kubectl get service -l app.kubernetes.io/name=ingress-nginx --namespace ingress-basic
           kubectl apply -f terraform/k8s/api-deployment.yml  --validate=false  
           sleep 30s && kubectl get service
+          kubectl get ingress
+
 
