--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,20 +38,12 @@ jobs:
           az aks install-cli
           az account set --subscription 83c62e88-35c0-4f8d-8636-f21914cc6d80
           az aks get-credentials --resource-group travel-rg --name kubernetes-travel --overwrite-existing
-          kubectl create namespace ingress-basic-travel1
-          curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
-          chmod 700 get_helm.sh
-          ./get_helm.sh
-          helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
-          helm repo update
-          helm show values ingress-nginx/ingress-nginx
-          helm install ingress-nginx ingress-nginx/ingress-nginx \
-            --namespace ingress-basic-travel1 \
-            --set controller.replicaCount=2 \
-            --set controller.nodeSelector."beta\.kubernetes\.io/os"=linux \
-            --set defaultBackend.nodeSelector."beta\.kubernetes\.io/os"=linux \
-            --set controller.service.externalTrafficPolicy=Local \
-            --set controller.service.loadBalancerIP=104.211.2.191
+          CLIENT_ID=$(az aks show --name kubernetes-travel --resource-group travel-rg --query identity.principalId -o tsv)
+          RG_SCOPE=$(az group show --name travel-rg --query id -o tsv)
+          az role assignment create \
+              --assignee ${CLIENT_ID} \
+              --role "Network Contributor" \
+              --scope ${RG_SCOPE}
           kubectl get service -l app.kubernetes.io/name=ingress-nginx --namespace ingress-basic-travel1
           kubectl apply -f terraform/k8s/api-deployment.yml  --validate=false  
           sleep 30s && kubectl get service
