--- a/terraform/k8s/api-deployment.yml
+++ b/terraform/k8s/api-deployment.yml
@@ -35,11 +35,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: travel-service
+  name: web
 spec:
   type: LoadBalancer
   ports:
-  - port: 433
+  - port: 80
   selector:
     app: web
 
