--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,18 +31,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-
-    - name: Run Terraform
-      run: |
-        set -e
-        cd terraform
-        terraform init -input=false
-        terraform apply -input=false -auto-approve
-      env:
-        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
     - name: Add /usr/local/bin to PATH
       run: |
         export PATH="/usr/local/bin:$PATH"
@@ -114,7 +102,7 @@ jobs:
             selector:
               app: web
           EOF
-          kubectl apply -f terraform/k8s/api-deployment.yml  --validate=false  
+          kubectl apply -f ./api-deployment.yml  --validate=false  
           sleep 30s && kubectl get service
           kubectl get ingress
 
