--- a/terraform/k8s/api-deployment.yml
+++ b/terraform/k8s/api-deployment.yml
@@ -35,11 +35,13 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: travel-api-web
+  name: my-web-service
 spec:
   selector:
-    app: web
+    app: web  
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
+  - protocol: TCP
+    port: 80
+    targetPort: 80
+  type: ClusterIP  
+
