--- a/terraform/k8s/api-deployment.yml
+++ b/terraform/k8s/api-deployment.yml
@@ -1,23 +1,34 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: web
-  labels:
-    app: web
 spec:
-  nodeSelector:
-    "kubernetes.io/os": linux
-  containers:
-  - name: web
-    image: montoyita41/proyecto:2024-05-15T11-26-36
-    ports:
-    - containerPort: 80
-    resources:
-      requests:
-        cpu: 250m
-      limits:
-        cpu: 500m
-  
+  replicas: 1
+  selector:
+    matchLabels:
+      app: web
+  strategy:
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
+  minReadySeconds: 5 
+  template:
+    metadata:
+      labels:
+        app: web
+    spec:
+      nodeSelector:
+        "kubernetes.io/os": linux
+      containers:
+      - name: web
+        image: montoyita41/proyecto:2024-05-15T11-26-36
+        ports:
+        - containerPort: 80
+        resources:
+          requests:
+            cpu: 250m
+          limits:
+            cpu: 500m
 ---
 apiVersion: v1
 kind: Service
