--- a/terraform/k8s/api-deployment.yml
+++ b/terraform/k8s/api-deployment.yml
@@ -33,14 +33,13 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: service
+  name: my-web-service
 spec:
-  type: NodePort
   selector:
     app: web  
   ports:
   - protocol: TCP
     port: 80
     targetPort: 80
- 
+  type: ClusterIP  
 
