--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Get timestamp # get the date of the build
+    - name: Get timestamp 
       id: date
       run: echo "date=$(TZ=':America/Bogota' date +'%Y-%m-%dT%H-%M-%S')" >> $GITHUB_OUTPUT
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag montoyita41/proyecto:${{ steps.date.outputs.date }}
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag montoyita41/proyecto:latest
     - name: Login to Dockerhub
       uses: docker/login-action@v3
       with:
@@ -26,7 +28,8 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Push the Docker image to Dockerhub
       run: docker push montoyita41/proyecto:${{ steps.date.outputs.date }}
-
+    - name: Push the Docker image to Dockerhub
+      run: docker push montoyita41/proyecto:latest
  deploykubernetes:
     runs-on: ubuntu-latest
     steps:
@@ -39,12 +42,20 @@ jobs:
         creds: '{"clientId":"${{ secrets.ARM_CLIENT_ID }}","clientSecret":"${{ secrets.ARM_CLIENT_SECRET }}","subscriptionId":"${{ secrets.ARM_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.ARM_TENANT_ID }}"}'
     - name: Checkout código
       uses: actions/checkout@v2
-    
+    - name: Run Terraform
+      run: |
+        set -e
+        cd terraform
+        terraform init -input=false
+        terraform apply -input=false -auto-approve
+      env:
+        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
     
     - name: Azure CLI script
       uses: azure/cli@v2
-      env:
-        TAG_ID: ${{ steps.date.outputs.tag_id }}
       with:
         azcliversion: latest
         inlineScript: |
@@ -52,6 +63,6 @@ jobs:
           az account set --subscription 83c62e88-35c0-4f8d-8636-f21914cc6d80
           az aks get-credentials --resource-group travel-rg --name kubernetes-travel --overwrite-existing
           kubectl apply -f terraform/k8s/api-deployment.yml  --validate=false  
-          sleep 30s && kubectl get service
+          sleep 30s && kubectl get svc
     
 
