--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
       run: docker push montoyita41/proyecto:latest
  deploykubernetes:
     runs-on: ubuntu-latest
+    needs: build
     steps:
     - uses: actions/checkout@v4
     - name: Add /usr/local/bin to PATH
