--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,6 +70,7 @@ jobs:
 
     - name: Install NGINX Ingress Controller
       run: |
+        helm init
         helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
         helm repo update
         helm install ingress-nginx ingress-nginx/ingress-nginx
