--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       run: docker push montoyita41/proyecto:latest
  deploykubernetes:
     runs-on: ubuntu-latest
-    needs: build
+  
     steps:
     - uses: actions/checkout@v4
 
@@ -59,9 +59,7 @@ jobs:
     - name: Install NGINX Ingress Controller
       run: |
         helm init
-        helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
-        helm repo update
-        helm install ingress-nginx ingress-nginx/ingress-nginx
+        helm install --name nginx-ingress stable/nginx-ingress --set rbac.create=true
 
     - name: Install cert-manager
       run: |
