--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,8 +58,11 @@ jobs:
 
     - name: Install NGINX Ingress Controller
       run: |
-        helm init
-        helm install --name nginx-ingress stable/nginx-ingress --set rbac.create=true
+        helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
+        helm repo update
+        helm install nginx-ingress ingress-nginx/ingress-nginx --namespace ian
+
+
 
     - name: Install cert-manager
       run: |
