--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,7 @@ jobs:
 
     - name: Install NGINX Ingress Controller
       run: |
+        helm init
         helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
         helm repo update
         helm install nginx-ingress ingress-nginx/ingress-nginx --namespace ian
