--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,13 +56,9 @@ jobs:
       with:
         version: 'latest'
 
-    - name: Install NGINX Ingress Controller
-      run: |
-        helm init
-        helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
-        helm repo update
-        helm install nginx-ingress ingress-nginx/ingress-nginx --namespace ian
-
+    - name: Nginx
+      run:  |
+        kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.3.0/deploy/static/provider/cloud/deploy.yaml
 
 
     - name: Install cert-manager
