--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
       run:  |
         helm upgrade --install ingress-nginx ingress-nginx \
         --repo https://kubernetes.github.io/ingress-nginx \
-        --namespace ingress-nginx --create-namespace
+        --namespace ingress-nginx 
 
 
     - name: Install cert-manager
