--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,7 @@ jobs:
   
     - name: Update Helm repositories
       run: |
+        helm init
         helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
         helm repo update
     
